# ORB-SLAM3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apt-dependencies.sh  apt-dependencies.txt  pyproject.toml  setup.py
.github/workflows/: build_compile.yml  build_publish.yml  build_publish_linux.yml  build_test.yml
include/: ORBSLAM3Wrapper.h
orbslam3/: __init__.py  _version.py
src/: ORBSLAM3Wrapper.cpp
src/orbslam3/: __init__.py  _version.py
test/: conftest.py  test_integration.py  test_wrapper.py
tests/: test_wrapper.py
tests/configs/Monocular-Inertial/: EuRoC_mono_inertial.yaml
tests/demo/: run_rgbd.py
