[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.12",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "orbslam3"
version = "1.2.5"
description = "SLAM and Global VO module for VNAV project"
readme = "README.md"
license = {text = "MIT"}  # Update when you decide
authors = [
    {name = "Alex S.", email = "savaalexandru562@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
Repository = "https://github.com/AlexandruRO45/ORB-SLAM3"